# Syllabus-GPT-RAG-

./: Ingestion_pipeline.py  chatbot_app.py  config.py  ingest.py  pyproject.toml
